--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 </head>
 <body>
 
-  <p></p><button type="button" onclick="setStyles()">Try it</button></p>
+  <p>
+    <button type="button" onclick="setStyles(g.s1)">Style 1</button>
+    <button type="button" onclick="setStyles(g.s2)">Style 2</button>
+    <button type="button" onclick="setStyles(g.s3)">Style 3</button>
+  </p>
 
   <span id='offers'>offers here</span>
 
