Need an emoji in index.html to force it being UTF8

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <span id='offers'>offers here</span>
 
     <script>
+      // 🍁
       initStyles();
-      setAfter('🍁');
+      setCSS('');
+      setStyles();
       setOffers();
     </script>
 
