--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <button type="button" onclick="setStyles(g.s1)">Style 1</button>
       <button type="button" onclick="setStyles(g.s2)">Style 2</button>
       <button type="button" onclick="setStyles(g.s3)">Style 3</button>
+      <button type="button" onclick="setStyles(g.s4)">Style 4</button>
     </p>
 
     <span id='offers'>offers here</span>
@@ -16,7 +17,6 @@
     <script>
       // 🍁
       initStyles();
-      setCSS('');
       setStyles();
       setOffers();
     </script>
