--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <body>
 
     <p>
+      Pluck neuer Paragraph
+    </p>
+
+    <p> 
       <button type="button" onclick="setStyles(g.s1)">Style 1</button>
       <button type="button" onclick="setStyles(g.s2)">Style 2</button>
       <button type="button" onclick="setStyles(g.s3)">Style 3</button>
