embed js as text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <p>
       Pluck neuer Paragraph
-      <embed src="_config.yml">      
+      <embed src="js/main.js">      
     </p>
 
     <p> 
