--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   </head>
   <body>
 
-    <p>
-      Pluck neuer Paragraph
-      <embed src="js/main.js">      
+    <p onload="return 'blub'">
+      
     </p>
 
     <p> 
